chore: Update dependencies in pyproject.toml

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 		}
 	],
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	"postAttachCommand": "sudo chown -R vscode:vscode /home/vscode/.cache/pypoetry ${containerWorkspaceFolder}/.venv && poetry config virtualenvs.in-project true && poetry install",
+	"postAttachCommand": "sudo chown -R vscode:vscode /home/vscode/.cache/pypoetry ${containerWorkspaceFolder}/.venv",
 	"remoteUser": "vscode",
 	"customizations": {
 		"vscode": {
