--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,19 @@
 [tool.poetry]
-name = "your-project-name"
+name = "nexhabit-backend"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pydantic = "^2.9.2"
+fastapi = "^0.115.2"
+supabase = "^2.9.0"
+python-dotenv = "^1.0.1"
+uvicorn = "^0.32.0"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
