--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ fastapi = "^0.115.2"
 supabase = "^2.9.0"
 python-dotenv = "^1.0.1"
 uvicorn = "^0.32.0"
+sqlalchemy = "^2.0.36"
+pytest = "^8.3.3"
+psycopg2 = "^2.9.10"
+litellm = "^1.50.0"
 
 
 [build-system]
