--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pluggy==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 postgrest==0.17.1 ; python_version >= "3.12" and python_version < "4.0"
 propcache==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
-psycopg2==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
+psycopg2-binary
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
 pytest==8.3.3 ; python_version >= "3.12" and python_version < "4.0"
