--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^8.3.3"
 psycopg2 = "^2.9.10"
 litellm = "^1.50.0"
 mangum = "^0.19.0"
+google-generativeai = "^0.8.3"
 
 
 [build-system]
